src/objects/Banner__c.object
<CustomObject>
    <description>Banner content for Member Leader App</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <label>HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contact_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_in_future</fullName>
        <active>true</active>
        <description>The End Date should be in the future</description>
        <errorConditionFormula>End_Date__c &lt; NOW()</errorConditionFormula>
        <errorMessage>The End Date should be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Periods</fullName>
        <active>true</active>
        <description>The End Date should be greater than the Start Date</description>
        <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
        <errorMessage>The End Date should be greater than the Start Date</errorMessage>
    </validationRules>
</CustomObject>